# Mnemo-Skill

./: .gitignore  LICENSE  PLAN.md  README.md  SKILL.md  colors_and_type.css  config.example.toml  mappings.toml  pyproject.toml  requirements-dev.txt  requirements.txt
cards/: media-literacy-finals-refined.csv  media-literacy-finals-refined.retention.json  media-literacy-finals-refined.settings.json  theology-vocation-refined.csv
docs/: roadmap.md
references/: anki_best_practices.md  knowledge_structures.md
scripts/: __init__.py  adapter.py  anki_connect.py  audit_cards.py  calibrate.py  card_schema.py  config.py  export_note_types.py  genanki_export.py  generate_flashcards.py  import_cards.py  import_refined_csv.py  ingest.py  knowledge.py  media.py  note_types.py  test_card_quality.py
tests/: test_adapter.py  test_anki_connect.py  test_calibrate.py  test_card_quality.py  test_card_schema.py  test_config.py  test_export_note_types.py  test_genanki_export.py  test_generate_flashcards.py  test_import_cards.py  test_import_refined_csv.py  test_ingest.py  test_knowledge.py  test_note_types.py
