[project]
name = "mnemo"
version = "0.0.1"
description = "Claude Code skill + toolkit that turns study material into high-quality Anki cards via AnkiConnect."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Mikel Taopa" }]
keywords = ["anki", "flashcards", "spaced-repetition", "claude", "ankiconnect"]

dependencies = [
    "requests>=2.31",
    "genanki>=0.13",
    "pymupdf>=1.24",
    "python-pptx>=0.6.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

# This repo is run as a toolkit/skill, not installed as a distributable package,
# so no build-system is declared. Tooling config below is what matters.

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["scripts"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
